<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddReminderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="16dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/add_reminder"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:gravity="top|start"
            android:hint="@string/add_reminder"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:textColor="@android:color/white"
            android:textColorHint="@color/primary_text_disabled_material_dark"
            tools:ignore="PrivateResource" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/add_reminder"
        android:background="@drawable/toolbar_drop_shadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_reminder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/abc_secondary_text_material_dark"
                android:textSize="30sp"
                tools:ignore="PrivateResource" />

            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setDate">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/date_icon"
                    android:src="@drawable/ic_date" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setTime">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/time_icon"
                    android:src="@drawable/ic_access_time" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/repeat_icon"
                    android:src="@drawable/ic_sync" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_icon"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:textOff="@string/off"
                    android:textOn="@string/on" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat_no"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setRepeatNo">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/repeat_no"
                    android:src="@drawable/ic_unfold_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_no_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat_type"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="selectRepeatType">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/repeat_type"
                    android:src="@drawable/ic_subject" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_primary_text_material_dark"
                        tools:ignore="PrivateResource" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notification_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="setNotificationOff"
        android:src="@drawable/ic_notifications_off" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notification_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="setNotificationOn"
        android:src="@drawable/ic_notifications_active" />

</RelativeLayout>